--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Paul Rudd</title>
-  <link rel='stylesheet prefetch' href='css/bootstrap/bootstrap.min.css'>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel='stylesheet' type='text/css' href='css/bootstrap/bootstrap.min.css'>
+  <link rel='stylesheet' type='text/css' href='css/style.css'>
 </head>
 
 <body>
